--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^3.1.2",
     "framer-motion": "^12.23.24",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
